# purchase-system

./: .coverage  .coveragerc  .editorconfig  .gitignore  .pylintrc  Dockerfile.dev  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: codacy.yml  codeql.yml
api/: main.py  router.py
api/adapters/: authentication.py  repositories.py  services.py
api/authentication/: __init__.py  authentication_service.py  config.py  login_service.py
api/controllers/: create_sale.py  delete_sale.py  get_token.py  get_user_cashback.py  list_sales.py  register.py  update_sale.py
api/routes/: create_sale.py  get_token.py  router.py
contrib/: api_test.http  localenv
purchase_system/: app.py
purchase_system/adapters/api/: main.py  router.py  services.py
purchase_system/adapters/authentication/: __init__.py  dummy_authentication.py
purchase_system/core/entities/: __init__.py  sale.py  salesman.py
purchase_system/core/services/: __init__.py  cashback_handler.py  create_new_salesman.py  delete_sale.py
purchase_system/domain/entities/: __init__.py  sale.py  salesman.py
purchase_system/domain/ports/: authentication_handler.py
purchase_system/shared/: entity.py  entity_id.py  exceptions.py  service.py
purchase_system/tests/: conftest.py
requirements/: base.txt  dev.txt
sales_register/shared/: exceptions.py  mapper.py  ports.py  service.py  use_case_interface.py
sales_register/tests/: conftest.py
scripts/: run-dev.sh
tests/: conftest.py
tests/test_shared/: test_entities.py
(+165 files in other folders)
