[tool.black]
skip-string-normalization=true
target-version = ['py38']
line-length=79
exclude='''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.local
    | \.pyenv
  )/
)
'''
[tool.poetry]
name = "sales-register"
version = "0.1.0"
description = ""
authors = ["Tamer Cuba <tamercuba@gmail.com>"]
readme = "README.md"
packages = [{include = "sales_register"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.3"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
python-decouple = "^3.8"
fastapi-jwt-auth = "^0.5.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
sqlalchemy = "^2.0.19"
greenlet = "^2.0.2"
mako = "^1.2.4"
markupsafe = "^2.1.3"
alembic = "^1.11.1"
python-dateutil = "^2.8.2"
python-editor = "^1.0.4"
psycopg2 = "^2.9.6"
chardet = "^5.1.0"
idna = "^3.4"
requests = "^2.31.0"
urllib3 = "^2.0.3"
certifi = "^2023.5.7"
pydantic-settings = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.4"
black = "^23.7.0"
isort = "^5.12.0"
email-validator = "^2.0.0.post2"
mypy = "^1.4.1"
types-requests = "^2.31.0.1"
flake8 = "^6.0.0"
pytest-deadfixtures = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
